--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -8,10 +8,11 @@
 	</head>
 	<body>
 		<section class="nav-wrapper container">
-			<a href="./index.html" class="fill">
-				<h5>海洋委員會</h5>
-			</a>
-			<h1 class="TealBlue d-none d-sm-block">海域休憩活動一站式平台</h1>
+			<div class="row">
+				<a href="./index.html" class="col-12 text-center navbar-brand Alabaster">
+					<img src="./img/LOGO.png" class="d-inline-block align-top">
+				</a>
+			</div>
 		</section>
 		<section class="container">
 			<div class="row">
@@ -59,15 +60,13 @@
 		</section>
 
 		<section class="tab-content">
-			<div class="container" id="tab1">
+			<div class="item1 container mt-3" id="tab1">
 				<div class="row">
 					<div class="col-12">
 						<h3 class="TealBlue">活動申請</h3>
 						<h5 class="text-justify">為提供民眾方便友善之橫向連結資訊，目前提供相關磯釣活動申請、遊艇申辦服務流程說明、龜山島登島申請與台江公園國家水域等海灣活動需提供申請之流程
 						</h5>
 					</div>
-				</div>
-				<div class="row">
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
 							<div class="card-body">
@@ -85,7 +84,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">遊艇申辦服務平台</h5>
 								<div class="card-text d-none d-sm-block">
 									交通部航港局於2019年推出【遊艇申辦服務平台】。服務平台使用非常容易，只要登錄帳號、填寫進出港申請、申請泊位，即可等著收取email確認。
@@ -101,7 +100,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">東北角龜山島登島</h5>
 								<div class="card-text d-none d-sm-block">
 									龜山島各項申請查詢作業、船舶資訊、法規資訊、登島表單之線上申請系統。
@@ -117,7 +116,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">台江國家公園水域</h5>
 								<div class="card-text d-none d-sm-block">
 									特別景觀區之「特一-北汕尾濕地特別景觀區」、「特五-曾文溪口特別景觀區」部分公共河道水域，一般管制區之「管一-鹽水溪水域一般管制區」部分水域、「管八-七股潟湖一般管制區」水域應向台江國家公園申請核准後始得從事水域遊憩活動。
@@ -141,7 +140,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">娛樂漁船</h5>
 								<div class="card-text d-none d-sm-block">
 									此為漁業署之娛樂漁業管理辦法條文連結，提供法條參考與相關文件。
@@ -154,7 +153,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">撿拾漂流木</h5>
 								<div class="card-text d-none d-sm-block">
 									林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
@@ -170,7 +169,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">賞鯨活動</h5>
 								<div class="card-text d-none d-sm-block">
 									臺灣鯨豚資源豐富，全球80多種鯨豚中，有近30種曾出現於我國周遭海域，每年4月到10月間是臺灣的賞鯨季節，海保署透過「臺灣海域賞鯨指南」發布，以淺顯易懂的圖像文字，說明友善賞鯨重點原則，希望大家都能當個負責任的遊客，在開心賞鯨時，也瞭解如何減少賞鯨活動對於鯨豚族群造成衝擊，讓珍貴的鯨豚資源與賞鯨產業皆能永續發展。
@@ -186,7 +185,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">藍色公路</h5>
 								<div class="card-text d-none d-sm-block">
 									藍色公路目前主要有兩條航線。一是基隆河，由大佳河濱公園碼頭出發至美堤碼頭、錫口碼頭，於內湖科技園區附近的河域再往返，主要以遊河為主，夜晚河畔建築物燈光以及橋上的光雕點綴，更能展現臺北都市之美；另外一條是淡水河，而在淡水河有五個乘船處，分別是大稻埕碼頭、關渡碼頭、淡水客船碼頭、淡水漁人碼頭、八里客船碼頭。
@@ -202,7 +201,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">遊艇管理規則</h5>
 								<div class="card-text d-none d-sm-block">
 									此為全國法規資料庫之【遊艇管理規則】法規，提供有需要之民眾查閱。
@@ -218,7 +217,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="card mt-2">
-							<div class="card-body">
+							<div class="card-body bg-img">
 								<h5 class="card-title">海域保險專區</h5>
 								<div class="card-text d-none d-sm-block">
 									產險業者推出「海域活動綜合保險」商品，保障內容除了一般傷害保險與旅行平安險保障外，還增加民眾參與海域休憩活動可能面臨的傷害保障。
@@ -234,7 +233,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="item2 container" id="tab2">
+			<div class="item2 container mt-3" id="tab2" style="display: none;">
 				<div class="row tab2">
 					<div class="col-12 col-md-6 col-lg-6 col-xl-6">
 						<h3 class="TealBlue">禁止水域</h3>
@@ -266,39 +265,39 @@
 					</div>
 				</div>
 			</div>
-			<div class="item3 container" id="tab3">
+			<div class="item3 container mt-3" id="tab3" style="display: none;">
 				<div class="row text-center">
-					<div class="col-12 col-sm-6 col-md-4 hover-blur">
+					<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 						<a href="">
 							<img src="./img/lightbox_page/assets1.svg" class="Isometric rounded-circle border-4">
 							<h2><span class="text-white">Hover Blur</span></h2>
 						</a>
 					</div>
-					<div class="col-12 col-sm-6 col-md-4 hover-blur">
+					<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 						<a href="">
 							<img src="./img/lightbox_page/assets2.svg" class="Isometric rounded-circle border-4">
 								<h2><span class="text-white">Hover Blur</span></h2>
 						</a>
 					</div>
-					<div class="col-12 col-sm-6 col-md-4 hover-blur">
+					<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 						<a href="">
 							<img src="./img/lightbox_page/assets3.svg" class="Isometric rounded-circle border-4">
 							<h2><span class="text-white">Hover Blur</span></h2>
 						</a>
 					</div>
-					<div class="col-12 col-sm-6 col-md-4 hover-blur">
+					<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 						<a href="">
 							<img src="./img/lightbox_page/assets4.svg" class="Isometric rounded-circle border-4">
 							<h2><span class="text-white">Hover Blur</span></h2>
 						</a>
 					</div>
-					<div class="col-12 col-sm-6 col-md-4 hover-blur">
+					<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 						<a href="">
 							<img src="./img/lightbox_page/assets5.svg" class="Isometric rounded-circle border-4">
 							<h2><span class="text-white">Hover Blur</span></h2>
 						</a>
 					</div>
-					<div class="col-12 col-sm-6 col-md-4 hover-blur">
+					<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 						<a href="">
 							<img src="./img/lightbox_page/assets6.svg" class="Isometric rounded-circle border-4">
 							<h2><span class="text-white">Hover Blur</span></h2>
@@ -306,7 +305,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col">
+					<div class="col mt-3">
 						<fieldset class="d-inline-block">
 							<legend class="d-inline-block w-unset me-3">
 								<label for="one">地區</label>
@@ -336,10 +335,99 @@
 					</div>
 				</div>
 			</div>	
-			<div class="item4 container" id="tab4">
-				aaaaa
+			<div class="item4 container mt-3" id="tab4" style="display: none;">
+				<div class="row">
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="https://www.windy.com/?23.652,121.278,8">
+							<img src="./img/lightbox_page/windy.png" class="item4-icon">
+							<div>
+								<span class="d-inline-block">Windy</span>
+								<p class="d-inline-block">(外部連結)</p>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="https://safesee.cwb.gov.tw/V2/">
+							<img src="./img/lightbox_page/cwb.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">台灣氣象災防平台</span>
+								<p class="d-inline-block">(外部連結)</p>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
+							<img src="./img/lightbox_page/observatory.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">商港觀測站</span>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
+							<img src="./img/lightbox_page/forecast.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">近海天氣預報</span>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
+							<img src="./img/lightbox_page/coastal.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">沿海鄉鎮天氣預報</span>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
+							<img src="./img/lightbox_page/occeanCurrent.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">表面海流</span>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
+							<img src="./img/lightbox_page/tidal.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">潮汐資訊</span>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<a class="weather-contentBlock" href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
+							<img src="./img/lightbox_page/quality.png" class="item4-icon">
+							<div>
+								<span class="d-iline-block">海域水質</span>
+							</div>
+						</a>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<div class="weather-contentBlock">
+							<img src="./img/lightbox_page/wave.png" class="item4-icon">
+							<div>
+								<span>波浪資訊</span>
+								<a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
+								<a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
+								<a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常趨勢</a>
+							</div>
+						</div>
+					</div>
+					<div class="col col-lg-2 col-xl-2">
+						<div class="weather-contentBlock">
+							<img src="./img/lightbox_page/surfaceTemperature.png" class="item4-icon">
+							<div>
+								<span>波浪資訊</span>
+								<a href="map.html?uuid=9f3c63b0-7fe7-493a-9995-0e70dc4ae5b9">溫度</a>
+								<a href="map.html?uuid=5a1cb7a2-2c28-4860-a4c8-80c057929ea1">高度</a>
+								<a href="map.html?uuid=4b5fb55a-3d4e-412c-a23b-c0d3b950e886">鹽度</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="item5 container" id="tab5">
+			<div class="item5 container mt-3" id="tab5" style="display: none;">
 				<div class="row tab5 justify-content-center">
 					<div class="col-12 col-md-8 col-lg-6 col-xl-6">
 						<h3 class="TealBlue">法令資訊</h3>
@@ -357,7 +445,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="item6 container" id="tab6">
+			<div class="item6 container mt-3" id="tab6" style="display: none;">
 				<div class="row tab6 justify-content-center">
 					<div class="col-12 col-md-8 col-lg-6 col-xl-6">
 						<h3 class="TealBlue">海況影像</h3>
