--- a/src/index2.html
+++ b/src/index2.html
@@ -354,8 +354,8 @@
         </h5>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">基隆市島礁磯釣活動</h5>
             <div class="card-text d-none d-sm-block">
               基隆市政府2020年推出【島礁磯釣證線上申請系統】，讓民眾更方便快速完成辦證，帶動島礁磯釣國際賽事與週邊相關產業發展。
@@ -369,8 +369,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">遊艇申辦服務平台</h5>
             <div class="card-text d-none d-sm-block">
               交通部航港局於2019年推出【遊艇申辦服務平台】。服務平台使用非常容易，只要登錄帳號、填寫進出港申請、申請泊位，即可等著收取email確認。
@@ -385,8 +385,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">東北角龜山島登島</h5>
             <div class="card-text d-none d-sm-block">
               龜山島各項申請查詢作業、船舶資訊、法規資訊、登島表單之線上申請系統。
@@ -401,8 +401,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">台江國家公園水域</h5>
             <div class="card-text d-none d-sm-block">
               特別景觀區之「特一-北汕尾濕地特別景觀區」、「特五-曾文溪口特別景觀區」部分公共河道水域，一般管制區之「管一-鹽水溪水域一般管制區」部分水域、「管八-七股潟湖一般管制區」水域應向台江國家公園申請核准後始得從事水域遊憩活動。
@@ -425,8 +425,8 @@
         </h5>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">娛樂漁船</h5>
             <div class="card-text d-none d-sm-block">
               此為漁業署之娛樂漁業管理辦法條文連結，提供法條參考與相關文件。
@@ -438,8 +438,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">撿拾漂流木</h5>
             <div class="card-text d-none d-sm-block">
               林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
@@ -454,8 +454,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">賞鯨活動</h5>
             <div class="card-text d-none d-sm-block">
               臺灣鯨豚資源豐富，全球80多種鯨豚中，有近30種曾出現於我國周遭海域，每年4月到10月間是臺灣的賞鯨季節，海保署透過「臺灣海域賞鯨指南」發布，以淺顯易懂的圖像文字，說明友善賞鯨重點原則，希望大家都能當個負責任的遊客，在開心賞鯨時，也瞭解如何減少賞鯨活動對於鯨豚族群造成衝擊，讓珍貴的鯨豚資源與賞鯨產業皆能永續發展。
@@ -470,8 +470,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">藍色公路</h5>
             <div class="card-text d-none d-sm-block">
               藍色公路目前主要有兩條航線。一是基隆河，由大佳河濱公園碼頭出發至美堤碼頭、錫口碼頭，於內湖科技園區附近的河域再往返，主要以遊河為主，夜晚河畔建築物燈光以及橋上的光雕點綴，更能展現臺北都市之美；另外一條是淡水河，而在淡水河有五個乘船處，分別是大稻埕碼頭、關渡碼頭、淡水客船碼頭、淡水漁人碼頭、八里客船碼頭。
@@ -486,8 +486,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">遊艇管理規則</h5>
             <div class="card-text d-none d-sm-block">
               此為全國法規資料庫之【遊艇管理規則】法規，提供有需要之民眾查閱。
@@ -502,8 +502,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="card mt-2">
-          <div class="card-body">
+        <div class="card mt-2 bg-img">
+          <div class="card-body opacity">
             <h5 class="card-title">海域保險專區</h5>
             <div class="card-text d-none d-sm-block">
               產險業者推出「海域活動綜合保險」商品，保障內容除了一般傷害保險與旅行平安險保障外，還增加民眾參與海域休憩活動可能面臨的傷害保障。
