--- a/src/index.html
+++ b/src/index.html
@@ -7,84 +7,86 @@
 </head>
 <body>
   <div id="container"></div>
-  <header class="container">
-    <div class="row">
-      <a href="#" class="col-12 text-center navbar-brand Alabaster">
-        <img src="./img/LOGO.png" class="d-inline-block align-top">
-      </a>
-    </div>
-  </header>
-  <div class="container">
-    <div class="row">
-      <p class="marquee">
-        <span class="py-1 px-2 rounded-pill">
-          海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。
-        </span>
-      </p>
-    </div>
-    <div class="row opacity text-center mt-2">
-      <a href="insidePage.html#tab1" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage active">
-        <div class="my-3 my-lg-2">
-          <img class="section-item-icon" src="./img/leading_page/application.png">
-        </div>
-        <button class="btn2 TealBlue">活動申請</button>
-      </a>
-      <a href="insidePage.html#tab2" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage">
-        <div class="my-3 my-lg-2">
-          <img class="section-item-icon" src="./img/leading_page/warning.png">
-        </div>
-        <button class="btn2 TealBlue">
-          禁止水域<br>
-          礙航/射擊通報
-        </button>
-      </a>
-      <a href="insidePage.html#tab3" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
-        <div class="  my-3 my-lg-2">
-          <img class="section-item-icon" src="./img/leading_page/recreation.png">
-        </div>
-        <button class="btn2 TealBlue">遊憩查詢</button>
-      </a>
-      <a href="insidePage.html#tab4" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3" id="weatherPage">
-        <div class="  my-3 my-lg-2">
-          <img class="section-item-icon" src="./img/leading_page/weather.png">
-        </div>
-        <button class="btn2 TealBlue">氣象海情</button>
-      </a>
-      <a href="map.html?catelog=situation" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
-          <div class="  my-3 my-lg-2">
-            <img class="section-item-icon" src="./img/leading_page/law.png">
+  <div class="wrapper">
+    <header class="container">
+      <div class="row">
+        <a href="#" class="col-12 text-center navbar-brand Alabaster">
+          <img src="./img/LOGO.png" class="d-inline-block align-top">
+        </a>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <p class="marquee">
+          <span class="py-1 px-2 rounded-pill">
+            海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。
+          </span>
+        </p>
+      </div>
+      <div class="row opacity text-center mt-2">
+        <a href="insidePage.html#tab1" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage active">
+          <div class="my-3 my-lg-2">
+            <img class="section-item-icon" src="./img/leading_page/application.png">
           </div>
-          <button class="btn2 TealBlue">法令資訊</button>
-      </a>
-      <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
-        <div class="  my-3 my-lg-2">
-          <img class="section-item-icon" src="./img/leading_page/cctv.svg">
-        </div>
-        <button class="btn2 TealBlue">海況影像</button>
-      </a>
-      <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
-        <div class="  my-3 my-lg-2">
-          <img class="section-item-icon rounded-circle" src="./img/leading_page/taiwanmap.png">
-        </div>
-        <button class="btn2 TealBlue">進入地圖</button>
-      </a>
-    </div>
-    <div class="row opacity mt-2">
-      <div class="col-12">
-        <div class="my-3 p-2 bg-light rounded">
-          <h4>網站法規資訊</h4>
-          <p class="text-break">本系統係為便利一般民眾單站視覺化查詢海域遊憩活動相關規定，所呈現之法規、公告資料為各主管機關、各縣市政府所提供資料彙整而得<span id="dots">...</span><span class="more" id="more">，因各主管機關、各縣市資料建置時間之差異及建檔品質，與實際公告或有不同，實際內容仍依各主管機關、各縣市政府公告為準。
-
-            使用者不得將本系統所提供之資料內容或查詢結果作為任何形式之依據或主張，本會對於所有資料內容之正確性及完整性，皆不負擔保之責。使用者如因使用本系統之資料而受損害或損失，或因此導致使用者或第三人遭受損害或損失而遭求償者，本系統管理機關及各資料提供機關不負任何賠償或補償之責。
+          <button class="btn2 TealBlue">活動申請</button>
+        </a>
+        <a href="insidePage.html#tab2" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage">
+          <div class="my-3 my-lg-2">
+            <img class="section-item-icon" src="./img/leading_page/warning.png">
+          </div>
+          <button class="btn2 TealBlue">
+            禁止水域<br>
+            礙航/射擊通報
+          </button>
+        </a>
+        <a href="insidePage.html#tab3" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+          <div class="  my-3 my-lg-2">
+            <img class="section-item-icon" src="./img/leading_page/recreation.png">
+          </div>
+          <button class="btn2 TealBlue">遊憩查詢</button>
+        </a>
+        <a href="insidePage.html#tab4" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3" id="weatherPage">
+          <div class="  my-3 my-lg-2">
+            <img class="section-item-icon" src="./img/leading_page/weather.png">
+          </div>
+          <button class="btn2 TealBlue">氣象海情</button>
+        </a>
+        <a href="map.html?catelog=situation" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+            <div class="  my-3 my-lg-2">
+              <img class="section-item-icon" src="./img/leading_page/law.png">
+            </div>
+            <button class="btn2 TealBlue">法令資訊</button>
+        </a>
+        <a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+          <div class="  my-3 my-lg-2">
+            <img class="section-item-icon" src="./img/leading_page/cctv.svg">
+          </div>
+          <button class="btn2 TealBlue">海況影像</button>
+        </a>
+        <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+          <div class="  my-3 my-lg-2">
+            <img class="section-item-icon rounded-circle" src="./img/leading_page/taiwanmap.png">
+          </div>
+          <button class="btn2 TealBlue">進入地圖</button>
+        </a>
+      </div>
+      <div class="row opacity mt-2">
+        <div class="col-12">
+          <div class="my-3 p-2 bg-light rounded">
+            <h4>網站法規資訊</h4>
+            <p class="text-break">本系統係為便利一般民眾單站視覺化查詢海域遊憩活動相關規定，所呈現之法規、公告資料為各主管機關、各縣市政府所提供資料彙整而得<span id="dots">...</span><span class="more" id="more">，因各主管機關、各縣市資料建置時間之差異及建檔品質，與實際公告或有不同，實際內容仍依各主管機關、各縣市政府公告為準。
   
-            若屬全面性禁止事項或禁止採捕海域動、植物，例如海洋保育署公告之保育物種、漁業署公告之禁用漁法或禁止採捕魚種，即使沒在個別海域之法令中敘述，仍屬應遵守之規定。
-  
-            使用者進入本系統，視同同意上開使用規範。本系統所有資料僅限正常查詢、瀏覽使用，未經本會同意之大量抄錄或複製資料行為，將依違反著作權法及妨礙電腦使用罪辦理。</span><h6 id="myBtn" style="cursor: pointer;">更多 </p>
+              使用者不得將本系統所提供之資料內容或查詢結果作為任何形式之依據或主張，本會對於所有資料內容之正確性及完整性，皆不負擔保之責。使用者如因使用本系統之資料而受損害或損失，或因此導致使用者或第三人遭受損害或損失而遭求償者，本系統管理機關及各資料提供機關不負任何賠償或補償之責。
+    
+              若屬全面性禁止事項或禁止採捕海域動、植物，例如海洋保育署公告之保育物種、漁業署公告之禁用漁法或禁止採捕魚種，即使沒在個別海域之法令中敘述，仍屬應遵守之規定。
+    
+              使用者進入本系統，視同同意上開使用規範。本系統所有資料僅限正常查詢、瀏覽使用，未經本會同意之大量抄錄或複製資料行為，將依違反著作權法及妨礙電腦使用罪辦理。</span><h6 id="myBtn" style="cursor: pointer;">更多 </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <footer class="container text-center mt-2">
+  <footer class="container text-center mt-2 footer">
     <div class="row pt-3 opacity">
       <h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
       <h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
