搜尋框切版、跑馬燈顯示調整

--- a/src/index2.html
+++ b/src/index2.html
@@ -6,103 +6,6 @@
   <title>海委會一站式入口網站</title>
 </head>
 <body>
-  <!-- lightBox for weather_page-->
-  <div class="lightbox weather">
-    <div class="container lightbox-container">
-      <i class="fas fa-times"></i>
-      <div class="weather-content">
-        <a class="weather-contentBlock" href="https://www.windy.com/?23.652,121.278,8">
-          <div class="pic">
-            <img src="./img/lightbox_page/windy.png">
-          </div>
-          <div class="text">
-            <span>Windy</span>
-            <p>(外部連結)</p>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="https://safesee.cwb.gov.tw/V2/">
-          <div class="pic">
-            <img src="./img/lightbox_page/cwb.png">
-          </div>
-          <div class="text">
-            <span>台灣氣象災防平台</span>
-            <p>(外部連結)</p>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
-          <div class="pic">
-            <img src="./img/lightbox_page/observatory.png">
-          </div>
-          <div class="text">
-            <span>商港觀測站</span>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
-          <div class="pic">
-            <img src="./img/lightbox_page/forecast.png">
-          </div>
-          <div class="text">
-            <span>近海天氣預報</span>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
-          <div class="pic">
-            <img src="./img/lightbox_page/coastal.png">
-          </div>
-          <div class="text">
-            <span>沿海鄉鎮天氣預報</span>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
-          <div class="pic">
-            <img src="./img/lightbox_page/occeanCurrent.png">
-          </div>
-          <div class="text">
-            <span>表面海流</span>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
-          <div class="pic">
-            <img src="./img/lightbox_page/tidal.png">
-          </div>
-          <div class="text">
-            <span>潮汐資訊</span>
-          </div>
-        </a>
-        <a class="weather-contentBlock" href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
-          <div class="pic">
-            <img src="./img/lightbox_page/quality.png">
-          </div>
-          <div class="text">
-            <span>海域水質</span>
-          </div>
-        </a>
-        <div class="weather-contentBlock">
-          <div class="pic">
-            <img src="./img/lightbox_page/wave.png">
-          </div>
-          <div class="text">
-            <span>波浪資訊</span>
-            <a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
-            <a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
-            <a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常趨勢</a>
-          </div>
-        </div>
-        <div class="weather-contentBlock">
-          <div class="pic">
-            <img src="./img/lightbox_page/surfaceTemperature.png">
-          </div>
-          <div class="text">
-            <span>波浪資訊</span>
-            <a href="map.html?uuid=9f3c63b0-7fe7-493a-9995-0e70dc4ae5b9">溫度</a>
-            <a href="map.html?uuid=5a1cb7a2-2c28-4860-a4c8-80c057929ea1">高度</a>
-            <a href="map.html?uuid=4b5fb55a-3d4e-412c-a23b-c0d3b950e886">鹽度</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
@@ -116,43 +19,60 @@
             <div class="col-12 col-md-6 col-xl-6 hover-blur">
               <a href="">
                 <img src="./img/lightbox_page/assets1.svg" class="Isometric rounded-circle border-4">
-                <h2><span class="text-white">Hover Blur</span></h2>
+                <h2><span class="text-white">風箏衝浪</span></h2>
               </a>
             </div>
             <div class="col-12 col-md-6 col-xl-6 hover-blur">
               <a href="">
                 <img src="./img/lightbox_page/assets2.svg" class="Isometric rounded-circle border-4">
-                  <h2><span class="text-white">Hover Blur</span></h2>
+                  <h2><span class="text-white">獨木舟</span></h2>
               </a>
             </div>
             <div class="col-12 col-md-6 col-xl-6 hover-blur">
               <a href="">
                 <img src="./img/lightbox_page/assets3.svg" class="Isometric rounded-circle border-4">
-                <h2><span class="text-white">Hover Blur</span></h2>
+                <h2><span class="text-white">浮潛</span></h2>
               </a>
             </div>
             <div class="col-12 col-md-6 col-xl-6 hover-blur">
               <a href="">
                 <img src="./img/lightbox_page/assets4.svg" class="Isometric rounded-circle border-4">
-                <h2><span class="text-white">Hover Blur</span></h2>
+                <h2><span class="text-white">水肺潛水</span></h2>
               </a>
             </div>
             <div class="col-12 col-md-6 col-xl-6 hover-blur">
               <a href="">
                 <img src="./img/lightbox_page/assets5.svg" class="Isometric rounded-circle border-4">
-                <h2><span class="text-white">Hover Blur</span></h2>
+                <h2><span class="text-white">划船</span></h2>
               </a>
             </div>
             <div class="col-12 col-md-6 col-xl-6 hover-blur">
               <a href="">
                 <img src="./img/lightbox_page/assets6.svg" class="Isometric rounded-circle border-4">
-                <h2><span class="text-white">Hover Blur</span></h2>
+                <h2><span class="text-white">花式滑水</span></h2>
               </a>
             </div>
+            <div class="col-12 col-xl-6 d-flex justify-content-center align-items-center">
+							<fieldset class="d-inline-block">
+								<legend class="d-inline-block w-unset me-3">
+									<label for="two">設施</label>
+								</legend>
+								<div class="d-inline-block">
+									<select name="two" class="form-select" aria-label="Default select example">
+										<option selected>請選擇</option>
+										<option value="A">遊憩船具</option>
+										<option value="B">水上動力活動</option>
+										<option value="C">海濱活動</option>
+										<option value="D">水中活動</option>
+									</select>
+								</div>
+							</fieldset>
+							<form action="" class="ps-3">
+								<img src="./img/lightbox_page/magnifying-glass.svg" class="search">
+							</form>
+						</div>
           </div>
-          <div class="row">
-            <div class="col mt-3">
-              <fieldset class="d-inline-block">
+              <!-- <fieldset class="d-inline-block">
                 <legend class="d-inline-block w-unset me-2">
                   <label for="one">地區</label>
                 </legend>
@@ -164,25 +84,7 @@
                     <option value="3">Three</option>
                   </select>
                 </div>
-              </fieldset>
-              <fieldset class="d-inline-block">
-                <legend class="d-inline-block w-unset me-2">
-                  <label for="two">設施</label>
-                </legend>
-                <div class="d-inline-block">
-                  <select name="two" class="form-select" aria-label="Default select example">
-                    <option selected>請選擇</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
-              </fieldset>
-              <div style="display: unset;">
-                <img src="./img/lightbox_page/search.svg" style="vertical-align: super; cursor: pointer;">
-              </div>
-            </div>
-          </div>
+              </fieldset> -->
         </div>
       </div>
     </div>
