--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -272,55 +272,40 @@
 						<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 							<a href="">
 								<img src="./img/lightbox_page/assets1.svg" class="Isometric rounded-circle border-4">
-								<h2><span class="text-white">Hover Blur</span></h2>
+								<h2><span class="text-white">風箏衝浪</span></h2>
 							</a>
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 							<a href="">
 								<img src="./img/lightbox_page/assets2.svg" class="Isometric rounded-circle border-4">
-									<h2><span class="text-white">Hover Blur</span></h2>
+									<h2><span class="text-white">獨木舟</span></h2>
 							</a>
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 							<a href="">
 								<img src="./img/lightbox_page/assets3.svg" class="Isometric rounded-circle border-4">
-								<h2><span class="text-white">Hover Blur</span></h2>
+								<h2><span class="text-white">浮潛</span></h2>
 							</a>
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 							<a href="">
 								<img src="./img/lightbox_page/assets4.svg" class="Isometric rounded-circle border-4">
-								<h2><span class="text-white">Hover Blur</span></h2>
+								<h2><span class="text-white">水肺潛水</span></h2>
 							</a>
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 							<a href="">
 								<img src="./img/lightbox_page/assets5.svg" class="Isometric rounded-circle border-4">
-								<h2><span class="text-white">Hover Blur</span></h2>
+								<h2><span class="text-white">划船</span></h2>
 							</a>
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-xl-3 hover-blur">
 							<a href="">
 								<img src="./img/lightbox_page/assets6.svg" class="Isometric rounded-circle border-4">
-								<h2><span class="text-white">Hover Blur</span></h2>
+								<h2><span class="text-white">花式滑水</span></h2>
 							</a>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col mt-3">
-							<fieldset class="d-inline-block">
-								<legend class="d-inline-block w-unset me-3">
-									<label for="one">地區</label>
-								</legend>
-								<div class="d-inline-block">
-									<select name="one" class="form-select" aria-label="Default select example">
-										<option selected>請選擇</option>
-										<option value="1">One</option>
-										<option value="2">Two</option>
-										<option value="3">Three</option>
-									</select>
-								</div>
-							</fieldset>
+						<div class="col-12 col-md-6 col-xl-6 d-flex justify-content-center align-items-center">
 							<fieldset class="d-inline-block">
 								<legend class="d-inline-block w-unset me-3">
 									<label for="two">設施</label>
@@ -328,12 +313,16 @@
 								<div class="d-inline-block">
 									<select name="two" class="form-select" aria-label="Default select example">
 										<option selected>請選擇</option>
-										<option value="1">One</option>
-										<option value="2">Two</option>
-										<option value="3">Three</option>
+										<option value="A">遊憩船具</option>
+										<option value="B">水上動力活動</option>
+										<option value="C">海濱活動</option>
+										<option value="D">水中活動</option>
 									</select>
 								</div>
 							</fieldset>
+							<form action="" class="ps-3">
+								<img src="./img/lightbox_page/magnifying-glass.svg" class="search">
+							</form>
 						</div>
 					</div>
 				</div>	
