--- a/src/index2.html
+++ b/src/index2.html
@@ -209,7 +209,7 @@
       </p>
     </div>
     <div class="row opacity text-center mt-2">
-      <a href="map.html?catelog=situation" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage">
+      <a href="map.html?cate=force&uuid=df595e60-6287-4623-8317-4b8d6f82e2e5&panel=礙航/射擊通報" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3 gopage">
         <div class="my-3 my-lg-2">
           <img class="section-item-icon" src="./img/leading_page/warning.png">
         </div>
@@ -230,7 +230,7 @@
         </div>
         <button class="btn2 TealBlue">氣象海情</button>
       </a>
-      <a href="map.html?catelog=situation" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+      <a href="map.html?catelog=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon" src="./img/leading_page/law.png">
           </div>
