--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
           </div>
           <button class="btn2 TealBlue">氣象海情</button>
         </a>
-        <a href="map.html?catelog=situation" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="map.html?catelog=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
             <div class="  my-3 my-lg-2">
               <img class="section-item-icon" src="./img/leading_page/law.png">
             </div>
