--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
           </div>
           <button class="btn2 TealBlue">氣象海情</button>
         </a>
-        <a href="map.html?catelog=law" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="insidePage.html#tab5" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
             <div class="  my-3 my-lg-2">
               <img class="section-item-icon" src="./img/leading_page/law.png">
             </div>
@@ -63,7 +63,7 @@
           </div>
           <button class="btn2 TealBlue">海況影像</button>
         </a>
-        <a href="map.html" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
+        <a href="insidePage.html#tab6" class="col-sm-6 col-md-6 col-lg-4 col-xl-3 fill p-3">
           <div class="  my-3 my-lg-2">
             <img class="section-item-icon rounded-circle" src="./img/leading_page/taiwanmap.png">
           </div>
